--- a/src/main/resources/templates/Admistrator.html
+++ b/src/main/resources/templates/Admistrator.html
@@ -12,13 +12,13 @@
     <h1>Administrator</h1>
 
     <div class="department-section">
-        <a th:href="@{/support/general}"  class="card">
+        <a th:href="@{/general}"  class="card">
             <h3>General Support</h3>
         </a>
     </div>
 
     <div class="department-section">
-        <a th:href="@{/support/Technical}" class="card">
+        <a th:href="@{/Technical}" class="card">
             <h3>Technical Department</h3>
         </a>
     </div>
@@ -30,10 +30,11 @@
     </div>
 
     <div class="department-section">
-        <a href="productSupport.html" class="card">
+        <a th:href="@{/Product}" class="card">
             <h3>Product  Department</h3>
         </a>
     </div>
+
 </div>
 
 </body>
